Upcoming:
- Fixed the blindness module recipe

1.16-3.1.15:
- Fixed missing recipe for the destination analyzer

1.16-3.1.14:
- Fixed larger screens not refreshing correctly when the chunk got unloaded

1.16-3.1.13:
- Implemented a way for the redstone transmitter and receiver to reset the channel (through the GUI)

1.16-3.1.12:
- The screen controller is now infusable again
- The crafter is now infusable again
- Fixed some mod interaction with screens

1.16-3.1.11:
- Added protection for something that should not be possible in the digit renderer

1.16-3.1.10:
- Fixed a bug when remembering items in the crafter. This would also lock some of the player inventory slots
- Fixed a bug in the crafter where manually inputting a recipe (as opposed to letting it be done by JEI) didn't work properly

1.16-3.1.9:
- Fixed a crash in the digit block

1.16-3.1.8:
- Updated to latest version of McJtyLib
- Made the dialer more performant by also putting the access information in the teleportation data so that we don't need to get the matter receiver(s)

1.16-3.1.7:
- Fixed crash when linking the charged porter on a server
- Fixed a bug where the environmental controller only started working as soon as something like the radius is changed

1.16-3.1.6:
- Big fixes on the crafter. It works much cleaner now, will actually remember recipes and works properly with JEI (instead of only now and then)
- The matter transmitter and receiver private modes now work correctly even if the receiver and/or transmitter is in another dimension

1.16-3.1.5:
- Added a new 'cleanupreceivers' command that you can use to clean up receivers that no longer exist. This can be used after removing a dimension to get rid of the destination in the dialer

1.16-3.1.4:
- Updated to latest version of McJtyLib
- Fixed a few bugs in the matter booster en destination analyzer
- Made the timer and sequencer integer inputs less annoying to edit
- The tablet also works on the creative screen now