@@ -39,12 +39,12 @@ public class GuiSpawner extends GenericGuiContainer<SpawnerTileEntity, GenericCo
     private static final int SPAWNER_HEIGHT = 152;
 
     private EnergyBar energyBar;
-    private BlockRender blocks[] = new BlockRender[3];
-    private Label labels[] = new Label[3];
+    private final BlockRender[] blocks = new BlockRender[3];
+    private final Label[] labels = new Label[3];
     private Label name;
     private Label rfTick;
 
-    private static final ResourceLocation iconLocation = new ResourceLocation(RFToolsUtility.MODID, "textures/gui/spawner.png");
+    private static final ResourceLocation GUI = new ResourceLocation(RFToolsUtility.MODID, "textures/gui/spawner.png");
 
     public GuiSpawner(SpawnerTileEntity spawnerTileEntity, GenericContainer container, PlayerInventory inventory) {
         super(spawnerTileEntity, container, inventory, SpawnerModule.SPAWNER.get().getManualEntry());
@@ -72,7 +72,7 @@ public class GuiSpawner extends GenericGuiContainer<SpawnerTileEntity, GenericCo
         name = Widgets.label(22, 31, 78, 16, "").horizontalAlignment(HorizontalAlignment.ALIGN_LEFT);
         rfTick = Widgets.label(22, 47, 78, 16, "").horizontalAlignment(HorizontalAlignment.ALIGN_LEFT);
 
-        Panel toplevel = new Panel().background(iconLocation).layout(new PositionalLayout()).children(energyBar,
+        Panel toplevel = new Panel().background(GUI).layout(new PositionalLayout()).children(energyBar,
                 blocks[0], labels[0], blocks[1], labels[1], blocks[2], labels[2], rfTick, name);
         toplevel.setBounds(new Rectangle(leftPos, topPos, imageWidth, imageHeight));
 
@@ -118,17 +118,23 @@ public class GuiSpawner extends GenericGuiContainer<SpawnerTileEntity, GenericCo
                     SpawnerRecipes.MobSpawnAmount item = mobData.getItem(index);
                     ItemStack[] matchingStacks = item.getObject().getItems();
                     float amount = item.getAmount();
-                    if (matchingStacks.length == 0) {
+                    int size = matchingStacks.length;
+                    if (size == 0) {
                         ITag<Item> itemTag = ItemTags.getAllTags().getTag(SpawnerConfiguration.LIVING);
                         if (itemTag == null) {
                             this.blocks[i].renderItem(new ItemStack(Blocks.BEDROCK, 1));
                         } else {
-                            List<Item> items = new ArrayList<Item>(itemTag.getValues());
-                            int idx = (int) ((System.currentTimeMillis() / 500) % items.size());
-                            this.blocks[i].renderItem(new ItemStack(items.get(idx), 1));
+                            List<Item> items = new ArrayList<>(itemTag.getValues());
+                            int itemSize = items.size();
+                            if (itemSize > 0) {
+                                int idx = (int) ((System.currentTimeMillis() / 500) % itemSize);
+                                this.blocks[i].renderItem(new ItemStack(items.get(idx), 1));
+                            } else {
+                                this.blocks[i].renderItem(ItemStack.EMPTY);
+                            }
                         }
                     } else {
-                        int idx = (int) ((System.currentTimeMillis() / 500) % matchingStacks.length);
+                        int idx = (int) ((System.currentTimeMillis() / 500) % size);
                         ItemStack b = matchingStacks[idx];
                         blocks[i].renderItem(b);
                     }
